# pokeRoguePC

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
