[package]
name = "poke-rogue-play"
version = "0.0.1"
description = "Poke Rogue Play App"
authors = ["won"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.7", features = ["shell-open"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release.package.wry]
debug = true
debug-assertions = true
